# Main-blackphnix.site

./: .gitignore  .htaccess  .replit  README_AUTOMATION.md  ads.txt  cleanup.py  cleanup_subdomains.py  email_template.html  firebase_rules_documentation.md  index.html  mail_sender.py  main.py  migrate_plans.py  migrate_plans_final.py  models.py  pricing_shared.html  pyproject.toml  replit.md  requirements.txt  routes.py  routes.py.backup  server.py
assets/: index-B403tFjw.js
client/: index.html
public/: .htaccess  .replit  bot_script.js  index.html  replit.md  sw.js  sw_1768827361567.js
public/assets/: index-B403tFjw.js  index-Cte1lk7-.css
public_html/: .replit
src/: models.py
src/api/: routes.py
src/scripts/: cleanup.py
src/services/: ai_agent_service.py  cyberpanel_service.py  encryption_service.py
